--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/platform-server": "^19.0.6",
     "@angular/router": "^19.0.6",
     "@angular/ssr": "^19.0.7",
+    "@types/socket.io-client": "^3.0.0",
     "@web3auth/ethereum-provider": "^9.5.2",
     "@web3auth/modal": "^9.5.2",
     "ethers": "^6.13.5",
     "express": "^4.18.2",
     "hardhat": "^2.22.17",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "web3": "^4.16.0",
     "web3modal": "^1.9.12",
